[gd_scene load_steps=2 format=3 uid="uid://dlppasf4dvwif"]

[ext_resource type="Script" path="res://modules/camera_limiter/camera_limiter.gd" id="1_h8gk4"]

[node name="CameraLimiter" type="Node2D"]
script = ExtResource("1_h8gk4")

[node name="TopLeft" type="Marker2D" parent="."]

[node name="BottomRight" type="Marker2D" parent="."]
